--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/flashcard_Layout"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/flashcard_question"
-        android:visibility="visible"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:gravity="center"
-        android:text="Who is the 44th President of the United States?"
-        android:textSize="40sp" />
 
     <TextView
-        android:id="@+id/flashcard_answer"
-        android:visibility="invisible"
+        android:id="@+id/flashcard_question"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/card_background"
+        android:elevation="5dp"
+        android:gravity="center"
+        android:text="Who is the 44th President of the United States?"
+        android:textColor="#B3A8A8"
+        android:textSize="40sp"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/flashcard_answer_1"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_below="@+id/flashcard_question"
+        android:layout_marginTop="85dp"
+        android:background="@color/background_text"
+        android:gravity="center"
+        android:text="Bill Clinton"
+        android:textColor="#405B85"
+        android:textSize="40sp"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/flashcard_answer_2"
+        android:layout_width="match_parent"
+        android:layout_height="66dp"
+        android:layout_below="@+id/flashcard_answer_1"
+        android:layout_marginTop="40dp"
+        android:background="#FFDCC78A"
+        android:gravity="center"
+        android:text="George H. W. Bush"
+        android:textColor="#405B85"
+        android:textSize="40sp"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/flashcard_answer_3"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_below="@+id/flashcard_answer_2"
+        android:layout_marginTop="40dp"
+        android:background="#FFDCC78A"
         android:gravity="center"
         android:text="Barack Obama"
-        android:textSize="40sp" />
+        android:textColor="#405B85"
+        android:textSize="40sp"
+        android:visibility="visible"/>
+
+    <ImageView
+        android:id="@+id/toggle_choices_visibility"
+        android:layout_width="match_parent"
+        android:layout_height="51dp"
+        android:layout_marginTop="630dp"
+        android:src="@drawable/iconmonstr_eye_lined" />
+
+    <ImageView
+        android:id="@+id/toggle_choices_visibility_2"
+        android:layout_width="match_parent"
+        android:layout_height="51dp"
+        android:layout_marginTop="630dp"
+        android:src="@drawable/iconmonstr_eye_off_filled" />
+
 </RelativeLayout>
